fix: navbar drawer not working on mobile

--- a/apps/frontend/src/app/components/header/header.component.scss
+++ b/apps/frontend/src/app/components/header/header.component.scss
@@ -212,16 +212,11 @@
 
   &.open {
     &:hover .submenu,
-    .submenu {
-      @media screen and (max-width: 992px) {
-        display: block;
-        opacity: 1;
-      }
-    }
     &:focus-within .submenu,
     .submenu {
       @media screen and (max-width: 992px) {
         display: block;
+        height: auto;
         opacity: 1;
       }
     }
@@ -231,7 +226,8 @@
     }
   }
 
-  &:hover {
+  &:hover,
+  &:focus-within{
     > a,
     > span {
       background-color: #f7f7f7;
@@ -242,22 +238,8 @@
       pointer-events: all;
 
       @media screen and (max-width: 992px) {
-        display: none;
-      }
-    }
-  }
-  &:focus-within {
-    > a,
-    > span {
-      background-color: #f7f7f7;
-    }
-
-    .submenu {
-      opacity: 1;
-      pointer-events: all;
-
-      @media screen and (max-width: 992px) {
-        display: none;
+        height: 0;
+        overflow: hidden;
       }
     }
   }
